Added flag so that fzf install no longer injects stuff into my bashrc; other misc. vimrc changes; removed SiteSpect header from .bash_login

--- a/link/.vimperatorrc
+++ b/link/.vimperatorrc
@@ -93,7 +93,7 @@ set hlsearch
 "" typically (see below) ignore case
 set ignorecase
 "" only consider case if an upper case char is used
-set smartcase
+"set smartcase
 
 
 " ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
