--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -125,10 +125,7 @@ set -g status-justify centre
 ###############################################################################
 
 # disable mouse support (at least while we're learning)
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+setw -g mouse off
 
 # If a bell is used in any of the attached sessions, trigger a
 # bell in the current window
