Improve tmux conf file layout

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -161,8 +161,9 @@ set -g status-left-length 24
 ###############################################################################
 # Local setup
 ###############################################################################
-# Load certain settings iff the terminal supports more than 8 colors
-if-shell '[ $(echo $TERM | tr -cd "[:digit:]") -ge 88 ] || [ "$(tput colors)" -ge 88 ]' 'source ~/.tmux.d/hicolor' \
+# Load certain settings iff the terminal supports more than 88 colors
+if-shell '[ $(echo $TERM | tr -cd "[:digit:]") -ge 88 ] || [ "$(tput colors)" -ge 88 ]' \
+	'source ~/.tmux.d/hicolor' \
 	'source ~/.tmux.d/locolor'
 
 # Load local configuration.
