Append .conf to tmux.d configuration files

--- a/base/tmux/.tmux.conf
+++ b/base/tmux/.tmux.conf
@@ -163,8 +163,8 @@ set -g status-left-length 24
 ###############################################################################
 # Load certain settings iff the terminal supports more than 88 colors
 if-shell '[ $(echo $TERM | tr -cd "[:digit:]") -ge 88 ] || [ "$(tput colors)" -ge 88 ]' \
-	'source ~/.tmux.d/hicolor' \
-	'source ~/.tmux.d/locolor'
+	'source ~/.tmux.d/hicolor.conf' \
+	'source ~/.tmux.d/locolor.conf'
 
 # Load local configuration.
-if-shell '[ -f ~/.tmux.d/local ]' 'source ~/.tmux.d/local'
+if-shell '[ -f ~/.tmux.d/local ]' 'source ~/.tmux.d/local.conf'
