Update tmux conf files for 2.4 changes and add dispatch.conf for handling the ugly bits of running source-file against the correct (for a given tmux version) conf files. Also move all conf files other than ~/.tmux.conf to ~/.config/tmux

--- a/base/tmux/.config/tmux/hicolor.conf
+++ b/base/tmux/.config/tmux/hicolor.conf
@@ -19,10 +19,6 @@ set -g status-left-length 24
 set -g status-left "#[fg=colour136,dim]#S"
 set -g status-right "#[fg=colour136,dim] #h | %d %b %R"
 
-# Hack to detect whether tmux is version 1.9 or above. Since the shell can't do
-# floating point comparison and we can't assume that bc or some similar program
-# is available, we just trust that tmux releases will never have more than two
-# digits.
-if-shell '[ $(tmux -V | tr -cd "[:digit:]") -ge 19 ]' \
-	'source ~/.tmux.d/current' \
-	'source ~/.tmux.d/deprecated'
+if-shell 'v="#{version}"; v="${v//./}"; v="${v:0:2}"; (( v >= 19 ))' \
+	'source ~/.config/tmux/1.9-hicolor.conf' \
+	'source ~/.config/tmux/pre-1.9-hicolor.conf'
