--- a/base/tmux/.tmux.conf
+++ b/base/tmux/.tmux.conf
@@ -1,170 +1,1 @@
-###############################################################################
-# Basic setup
-###############################################################################
-
-# Unbind the default prefix key combination
-unbind C-b
-
-# Set prefix key to Ctrl-a (default is Ctrl-t)
-set -g prefix C-a
-
-# Turn on colors for terminals that support it
-# (The -a flag appends to the option rather than overwriting it, which is why
-# the terminal description string starts with a comma)
-if-shell '[ $(echo $TERM | tr -cd "[:digit:]") -ge 256 ] || [ "$(tput colors)" -ge 256 ]' \
-	'set -g default-terminal screen-256color' \
-	'set -g default-terminal screen'
-set -ga terminal-overrides ",*88col*:colors=88,*256col*:colors=256,xterm*:XT"
-
-# Use utf8
-set -g utf8 on
-setw -g utf8 on
-
-###############################################################################
-# Keybindings
-###############################################################################
-
-### Session management
-# Pass through a ctrl-a if you press it twice
-bind C-a send-prefix
-
-# Set C-a q to kill session
-bind q kill-session
-
-# Reduce the 'timeout' after each instance of a repeatable action, like
-# resizing or moving between windows.
-#
-# Default is 500.
-set -g repeat-time 350
-
-### Navigation
-# Navigate using Vim-style keys
-setw -g mode-keys vi
-setw -g status-keys vi
-
-# Pressing up or down toggles maximization of pane
-bind Up resize-pane -Z
-bind Down resize-pane -Z
-
-# Pressing left and right rotates through panes in a window
-bind -r Left rotate-window -D
-bind -r Right rotate-window -U
-
-# vim / xmonad style bindings for pane movement
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
-
-# Vim / xmonad style bindings for window movement
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-# Window navigation
-bind -r n next-window
-bind -r m previous-window
-
-### Window and pane management
-# better mnemonics for splitting panes!
-bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -v -c '#{pane_current_path}'
-
-# new windows start in cwd, the next window index up from the current window
-bind c new-window -c '#{pane_current_path}' -a
-
-# shift-movement keys will resize panes
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# ctrl-shift movement keys will move windows
-bind -r > swap-window -t +1
-bind -r < swap-window -t +1
-
-### Text selection
-# copy/paste using Vim-style keys
-bind Escape copy-mode
-unbind p
-bind b list-buffers
-bind p paste-buffer
-bind Y run "tmux save-buffer /tmp/tmux/buffer.$(date '+%m-%d-%Y-%M-%S')"
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-
-# Copy selections to primary X11 paste buffer if we're in an X session and the
-# xsel executable is available.
-if-shell '[[ -n $DISPLAY ]] && type -ap xsel' \
-	'bind Y run "tmux save-buffer - | xsel -i 2>/dev/null" ; bind -t vi-copy "Y" copy-pipe "xsel -i 2>/dev/null"'
-
-# xclip support (commented as this often doesn't make sense on remote servers)
-#bind C-c run "tmux save-buffer - / xclip -i -sel clipboard"
-#bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
-# set up alias for turning on logging
-bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
-# bind r to reloading the config file
-bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
-
-###############################################################################
-# Cosmetics
-###############################################################################
-
-### Title display
-# Set title to something descriptive of the entire session
-set-option -g set-titles on
-
-# window number, program name, active vel non
-set-option -g set-titles-string '#H:#S.#I.#P #W #T'
-
-# Place windows status on left of status bar
-set -g status-justify centre
-
-###############################################################################
-# Miscellaneous
-###############################################################################
-
-# disable mouse support (at least while we're learning)
-setw -g mouse off
-
-# If a bell is used in any of the attached sessions, trigger a
-# bell in the current window
-set-option -g bell-action any
-
-# Aggressive-resize makes it so that tmux only resizes windows
-# in larger clients when smaller clients are actually looking at it
-setw -g aggressive-resize on
-
-# Enlarge console history
-set -g history-limit 100000
-
-# lower command delay
-set -sg escape-time 0
-
-# start first window and pane at 1, not zero
-set -g base-index 1
-set -g pane-base-index 1
-
-# Windows with activity are highlighted in status line.
-setw -g monitor-activity on
-
-# If on, display a status line message when activity occurs in a
-# window for which monitor-activity is enabled.
-set -g visual-activity off
-
-### Status bar
-# configure contents of status bar
-set -g status-utf8 on
-set -g status-interval 2
-set -g status-left-length 24
-
-###############################################################################
-# Local setup
-###############################################################################
-# Load certain settings iff the terminal supports more than 88 colors
-if-shell '[ $(echo $TERM | tr -cd "[:digit:]") -ge 88 ] || [ "$(tput colors)" -ge 88 ]' \
-	'source ~/.tmux.d/hicolor.conf' \
-	'source ~/.tmux.d/locolor.conf'
-
-# Load local configuration.
-if-shell '[ -f ~/.tmux.d/local ]' 'source ~/.tmux.d/local.conf'
+source-file ~/.config/tmux/base.conf
